Add tests to OutboxEvents